legend-pure-parser/examples/errors/07_mixed_valid_invalid.pure
###Pure

// ERROR: Mixing valid and invalid elements — parser stops at first error
Class model::errors::ValidClass
{
  name: String[1];
}

// This one has a broken property type
Class model::errors::BrokenClass
{
  data: [1];
}
